fixed th spacing in the footer menu

--- a/wp-content/themes/night-day-dance/sass/_footer.scss
+++ b/wp-content/themes/night-day-dance/sass/_footer.scss
@@ -132,7 +132,16 @@
     @include desktop {
       color:white;
       text-transform: uppercase;
-      padding-left:40px;
+      display: flex;
+      flex-direction: column;
+      width:20%;
+      font-size:1.5rem;
+      line-height: 2rem;
+    }
+  }
+  .css-footer-menu {
+    @include desktop {
+      margin:0 auto;
     }
   }
   .icon-wrapper{
@@ -155,14 +164,7 @@
     }
   }
 }
-.info-wrapper {
-  @include desktop {
-    display: flex;
-    flex-direction: column;
-    width:20%;
-  }
 
-}
 .menu-footermenu {
   display:none;
   @include desktop {
